--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 	<nav class="menu" style="background-color: #EEBF79;">
 		<a href="./pages/patron.html">BEM-VINDO</a>
-		<a href="/projeto/index.html">CARDAPIO</a>
+		<a href="./index.html">CARDAPIO</a>
 		<a href="./pages/contacto.html">CONTATO</a>
 		<a href="./pages/nuevos-clientes.html">PAGAMENTO</a>
 		<div class=" u-pull-right">
